2007-02-01  Roger Sayle  <roger@eyesopen.com>

	* trans-stmt.c (compute_overall_iter_number): Document function
	arguments.  Generalize "unconditional forall nest with constant
	bounds" optimization to eliminate unconditional inner loops with
	constant bounds.

2007-01-31  Tobias Burnus  <burnus@net-b.de>

	PR fortran/30520
	* interface.c (compare_actual_formal): Check conformance between
	  actual and VOLATILE dummy arguments.
	* symbol.c (gfc_add_volatile): Allow setting of VOLATILE
	  multiple times in different scopes.
	* decl.c (gfc_match_volatile): Search symbol in host association.

2007-01-31  Kazu Hirata  <kazu@codesourcery.com>

	* simplify.c, trans-array.c: Fix comment typos.

2007-01-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* invoke.texi (Code Gen Options): Fix abbreviation typo.
	* intrinsic.texi (ACCESS, LSHIFT, RSHIFT): Fix typos.

2007-01-30  Steve Ellcey  <sje@cup.hp.com>

	PR fortran/30432
	* trans-types.c (gfc_get_function_type):  Do not add void_type_node
	to empty arg list.
	* trans-decl.c (create_function_arglist): Change assert.

2007-01-29  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/30554
	* module.c (read_module): If a symbol is excluded by an ONLY
	clause, check to see if there is a symtree already loaded. If
	so, attach the symtree to the pointer_info.

2007-01-28  Thomas Koenig  <Thomas.Koenig@online.de>

	PR libfortran/30389
	* gfortran.h:  Remove gfc_simplify_init_1.
	* arith.h:  Remove third argument from gfc_compare_string.
	* arith.c(gfc_compare_expression):  Remove third argument
	from call to gfc_compare_string.
	(gfc_compare_string):  Remove third argument xcoll_table.
	Remove use of xcoll_table.
	* misc.c(gfc_init_1):  Remove call to gfc_simplify_init_1.
	* simplify.c(ascii_table):  Remove.
	(xascii_table): Likewise.
	(gfc_simplify_achar):  ICE if extract_int fails.  Remove use of
	ascii_table.  Warn if -Wsurprising and value < 0 or > 127.
	(gfc_simplify_char):  ICE if extract_int fails. Error if