@@ -1,3 +1,7 @@
+2007-02-01  Roger Sayle  <roger@eyesopen.com>
+
+	* gfortran.dg/dependency_20.f90: New test case.
+
 2007-01-31  Ian Lance Taylor  <iant@google.com>
 
 	* gcc.dg/lower-subreg-1.c (test): New test.
